_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The customer that the project is being implemented at</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>