_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Active_Bundle_Codes__c.field-meta.xml
<CustomField>
    <fullName>BI_Active_Bundle_Codes__c</fullName>
    <inlineHelpText>If the customer is currently using any bundles today, enter the active bundle codes. Enter codes in a comma seperated manner when including more than one bundle code</inlineHelpText>
    <label>Active Bundle Code(s)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>