_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_Comments__c</fullName>
    <label>Comments</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>