_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Customer_uses_bundles__c.field-meta.xml
<CustomField>
    <fullName>BI_Customer_uses_bundles__c</fullName>
    <inlineHelpText>Not applicable to Agency accounts</inlineHelpText>
    <label>Customer uses bundles?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>