_Source/force-app/main/default/objects/BI_Project__c/fields/BI_End_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_End_Date__c</fullName>
    <description>End Date of the Project</description>
    <inlineHelpText>End Date of the Project</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>