_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner_Id__c</fullName>
    <formula>Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Id</label>
    <type>Text</type>
</CustomField>