_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>BI_Project_Stage__c</fullName>
    <description>The current stage that the project is in</description>
    <inlineHelpText>The current stage that the project is in</inlineHelpText>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education/Discovery</fullName>
            </value>
            <value>
                <fullName>Verbal Commitment</fullName>
            </value>
            <value>
                <fullName>Commercial Discussion</fullName>
            </value>
            <value>
                <fullName>Commercial Acceptance</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>