_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Project_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Type</label>
    <referenceTo>BI_Project_Type__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>