_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Sandbox_Access__c.field-meta.xml
<CustomField>
    <fullName>BI_Sandbox_Access__c</fullName>
    <label>Sandbox Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Requested</fullName>
            </value>
            <value>
                <fullName>Access Given</fullName>
            </value>
            <value>
                <fullName>Access not Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>