_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Segmentation_Group__c.field-meta.xml
<CustomField>
    <fullName>BI_Segmentation_Group__c</fullName>
    <label>Segmentation Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Channel Self Serviceable</fullName>
            </value>
            <value>
                <fullName>Direct Channel TMC Serviceable</fullName>
            </value>
            <value>
                <fullName>NDC OBT Self Serviceable</fullName>
            </value>
            <value>
                <fullName>NDC OBT TMC Serviceable</fullName>
            </value>
            <value>
                <fullName>NDC Proprietary System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>