_Source/force-app/main/default/objects/BI_Project__c/fields/BI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Start_Date__c</fullName>
    <description>Start Date of the Project</description>
    <inlineHelpText>Start Date of the Project</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>