_Source/force-app/main/default/objects/BI_Project__c/recordTypes/BI_General.recordType-meta.xml
<RecordType>
    <fullName>BI_General</fullName>
    <active>true</active>
    <label>General</label>
</RecordType>