_Source/force-app/main/default/objects/BI_Project__c/recordTypes/BI_Online_Digital_Project.recordType-meta.xml
<RecordType>
    <fullName>BI_Online_Digital_Project</fullName>
    <active>true</active>
    <label>Online Digital Project</label>
</RecordType>