_Source/force-app/main/default/objects/BI_Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>BI_Project_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>04 All Projects</label>
</ListView>