_Source/force-app/main/default/objects/BI_Project__c/listViews/My_Projects_ALL.listView-meta.xml
<ListView>
    <fullName>My_Projects_ALL</fullName>
    <columns>NAME</columns>
    <columns>BI_Project_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <label>01 My Projects - ALL</label>
</ListView>