_Source/force-app/main/default/objects/BI_Project__c/listViews/My_Projects_General.listView-meta.xml
<ListView>
    <fullName>My_Projects_General</fullName>
    <columns>NAME</columns>
    <columns>BI_Project_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BI_Project__c.BI_General</value>
    </filters>
    <label>02  My Projects - General</label>
</ListView>