_Source/force-app/main/default/objects/BI_Project__c/listViews/X06_All_Projects_General.listView-meta.xml
<ListView>
    <fullName>X06_All_Projects_General</fullName>
    <columns>NAME</columns>
    <columns>BI_Account__c</columns>
    <columns>BI_Project_Type__c</columns>
    <columns>BI_Project_Status__c</columns>
    <columns>BI_Project_Stage__c</columns>
    <columns>BI_Start_Date__c</columns>
    <columns>BI_End_Date__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BI_Project__c.BI_General</value>
    </filters>
    <label>06  All Projects - General</label>
</ListView>